--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="czech">Czech</string>
     <string name="english">English</string>
     <string name="signin">Sign in</string>
+    <string name="signup">Sign up</string>
     <string name="signout">Sign out</string>
     <string name="profile">Profile</string>
     <string name="firstName">First name</string>
