--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="section_format">Hello World from section: %1$d</string>
-
-    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
     <string name="title_activity_main">Anatom</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_forgot">ForgotPassActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="facebook_app_id">1119387678093773</string>
 
-    <string name="app_name">Anatomy</string>
+    <string name="app_name">Anatom</string>
     <string name="startTest">Start practicing all</string>
     <string name="selectSystem">Select an organ system</string>
     <string name="selectBody">Select a body part</string>
@@ -25,8 +21,8 @@
     <string name="doNotKnow">I don\'t know</string>
     <string name="exercise">Practice medical anatomy with personalized questions.</string>
     <string name="exit">Exit</string>
-    <string name="internetAvailable">Internet is available..</string>
-    <string name="internetNotAvailable">Internet is not available.</string>
+    <string name="internetAvailable">Internet is available</string>
+    <string name="internetNotAvailable">Internet is not available</string>
 
     <string name="s01">General anatomy</string>
     <string name="s02">Bones</string>
@@ -98,5 +94,9 @@
     <string name="failedLogin">Log in failed</string>
     <string name="failedLoginText">Password or username does not match.</string>
     <string name="registrationFailed">Registration failed</string>
+    <string name="signedOut">Signed out</string>
+    <string name="loggedAs">Logged as </string>
+    <string name="error">Error</string>
+    <string name="errorMessage">Unfortunately, there has been an error in the app</string>
 
 </resources>
