--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -16,6 +16,8 @@
     <string name="exit">Ukončit</string>
     <string name="internetAvailable">Internet je dostupný</string>
     <string name="internetNotAvailable">Internet není dostupný</string>
+    <string name="continuePracticing">Pokračovat v procvičování</string>
+    <string name="selectChapter">Vybrat kapitolu</string>
 
     <string name="s01">Obecn\u00e1 anatomie</string>
     <string name="s02">Kosti</string>
