--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="exit">Exit</string>
     <string name="internetAvailable">Internet is available</string>
     <string name="internetNotAvailable">Internet is not available</string>
+    <string name="continuePracticing">Continue to practice</string>
+    <string name="selectChapter">Select a chapter</string>
 
     <string name="s01">General anatomy</string>
     <string name="s02">Bones</string>
