changing package name
changing package name

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -15,6 +15,7 @@
     <string name="doNotKnow">Nevím</string>
     <string name="exercise">Procvičování anatomie člověka na míru tvým znalostem.</string>
     <string name="exit">Ukončit</string>
+    <string name="updateAvailable">Pro pokračování nainstalujte aktualizaci</string>
     <string name="internetAvailable">Internet je dostupný</string>
     <string name="internetNotAvailable">Internet není dostupný</string>
     <string name="continuePracticing">Pokračovat v procvičování</string>
